nav: Fix search icon spacing

--- a/pkg/shell/nav.scss
+++ b/pkg/shell/nav.scss
@@ -81,7 +81,7 @@ $desktop: $phone + 1px;
 
     .pf-c-text-input-group__text-input {
       // Reserve space for the × icon
-      padding-inline-end: var(--pf-global--spacer--xl);
+      padding-inline: var(--pf-global--spacer--xl) 0;
       // Stroke outside, based on PF search dark mode mockups
       border: 1px solid var(--pf-global--palette--black-700);
     }
